--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend_vue",
+  "name": "vuejsauth",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,17 +8,38 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "axios": "^0.19.0",
+    "bootstrap-loader": "^3.0.4",
+    "idle-vue": "^2.0.5",
+    "jquery": "^3.5.0",
+    "jwt-decode": "^2.2.0",
+    "popper.js": "^1.16.1",
+    "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
+    "vue-cookies": "^1.5.13",
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.4",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.4.1",
+    "css-loader": "^3.5.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.2.2",
+    "exports-loader": "^0.7.0",
+    "imports-loader": "^0.8.0",
+    "node-sass": "^4.14.0",
+    "postcss-loader": "^3.0.0",
+    "resolve-url-loader": "^3.1.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.0",
+    "url-loader": "^4.1.0",
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
@@ -27,16 +48,23 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "@vue/standard"
     ],
+    "rules": {
+      "indent": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
-    },
-    "rules": {}
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not dead"
+    "not ie <= 8"
   ]
 }
